--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,8 @@
 .bottom {
     border-bottom: 2px solid #ccc;
   }
+  .error {
+  border: red solid 4px;
+  /*padding: 10px;*/
+  /*margin: 0 10px;*/
+}
